--- a/pom.xml
+++ b/pom.xml
@@ -27,13 +27,7 @@
         * a small, experimental Actor library;
         * some test utilities.
 
-        TheseFoolishThings supports JDK 7 and has got a small JDK 8 integration module.
-
-        Since version 3.0 lots of old stuff have been dropped:
-
-        * Support for Swing.
-        * Support for the NetBeans Platform.
-        * A very small support library for Vaadin.
+        TheseFoolishThings supports JDK 8, but requires JDK 11 to be compiled.
     </description>
 
     <distributionManagement>
@@ -50,6 +44,8 @@
         <scm.repo.url>ssh://git@bitbucket.org/tidalwave/thesefoolishthings-src.git</scm.repo.url>
         <scm.repo.readonly.url>https://bitbucket.org/tidalwave/thesefoolishthings-src</scm.repo.readonly.url>
         <scm.repo.browse.url>https://bitbucket.org/tidalwave/thesefoolishthings-src/src</scm.repo.browse.url>
+        <tidalwave.github.readonly.url>https://github.com/tidalwave-it/thesefoolishthings-src</tidalwave.github.readonly.url>
+        <tidalwave.github.browse.url>https://github.com/tidalwave-it/thesefoolishthings-src</tidalwave.github.browse.url>
     </properties>
 
     <!-- Repeated because of http://jira.codehaus.org/browse/SCM-442 -->
