Updated project description in master POM.

--- a/pom.xml
+++ b/pom.xml
@@ -16,18 +16,36 @@
     <version>3.2-ALPHA-9-SNAPSHOT</version>
     <name>TheseFoolishThings</name>
     <inceptionYear>2009</inceptionYear>
-    <url>http://thesefoolishthings.tidalwave.it</url>
+    <url>http://tidalwave.it/projects/thesefoolishthings</url>
     <description>
-        A kitchen sink of small libraries that are used by all projects by Tidalwave. It mostly contains:
+This project was born, several years ago, as the classic “kitchen sink” of stuff from other projects that was deemed of being reusable.
+Sometimes it grew in a disordered way, other times it was reviewed and cleaned up accurately. It contains different sort of things: from
+simple stuff such as a **```TimeProvider```** that can be mocked (for time-based tests), to **type safe ```Map```s** (following
+advice of Joshua Bloch); up to some more structured things such an extensible **```Finder```** to manipulate queries from a generic data
+source; **a facility for working with the DCI (Data, Context and Interactions) architectural pattern**; a **simple ```MessageBus```** suitable for using
+the Publish and Subscribe pattern inside an application.
 
-        * a few generic stuff such as ```Id``` and ```IdFactory```;
-        * the ```Finder``` API for fluent query builders;
-        * support for the DCI pattern (Data Context and Interaction), with optional Spring integration;
-        * a tiny but functional local Message Bus, with optional Spring integration;
-        * a small, experimental Actor library;
-        * some test utilities.
+There is also some really exotic stuff, such as small implementation of **collaborative
+Actors** (working, but designed basically for didactic purposes). Actually this whole project is often used in Java classes to show things
+that are reasonably contextualized in a real-world scenario (the core parts of this project are used by working pet projects; something is
+also part of industrial project). There is good stuff and some strange stuff - in general an attitude of this project is to also try things
+in a different way than the standard.
 
-        TheseFoolishThings supports JDK 8, but requires JDK 11 to be compiled.
+To guess whether the project is in a reasonably stable phase look at it version number: if it contains ALPHA it is undergoing a
+wild refactoring (which usually happens when it is updated to a major JDK release). Other than this, most of the Javadoc contains tags:
+
++ experimental: to designate things that are really raw and might go away soon, or perhaps mutate dramatically;
++ draft: to designate things that are going to stabilise;
++ stable: to designate things with a certain degree of maturity.
+
+In the past Clirr was used to enforce backward compatibility of stable things, but it was dropped after the JDK 8 upgrade. Up to now
+it hasn't been replaced by another tool yet. So perhaps at the moment TheseFoolishThings might be of your interest more for inspiration
+than for an effective use.
+
+To learn more about the things of this project, please have a look at its site - ${project.url} - where more documentation, javadoc
+and build reports are provided.
+
+TheseFoolishThings supports JDK 8, but requires JDK 11 to be compiled.
     </description>
 
     <distributionManagement>
