Example POM cleanup, JPA upgrade to 2.x.

--- a/modules/examples/DciPersistenceJpaExample/pom.xml
+++ b/modules/examples/DciPersistenceJpaExample/pom.xml
@@ -86,7 +86,7 @@
         </dependency>
         <dependency>
             <groupId>javax.persistence</groupId>
-            <artifactId>persistence-api</artifactId>
+            <artifactId>javax.persistence-api</artifactId>
         </dependency>
     </dependencies>
 </project>
