--- a/modules/examples/FinderExample3/pom.xml
+++ b/modules/examples/FinderExample3/pom.xml
@@ -38,8 +38,8 @@
         </dependency>
         <dependency>
             <groupId>javax.persistence</groupId>
-            <artifactId>persistence-api</artifactId>
-            <version>1.0</version>
+            <artifactId>javax.persistence-api</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
