--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@ in a different way than the standard.
 To guess whether the project is in a reasonably stable phase look at it version number: if it contains ALPHA it is undergoing a
 wild refactoring (which usually happens when it is updated to a major JDK release). Other than this, most of the Javadoc contains tags:
 
-+ experimental: to designate things that are really raw and might go away soon, or perhaps mutate dramatically;
-+ draft: to designate things that are going to stabilise;
-+ stable: to designate things with a certain degree of maturity.
++ **xperimental**: to designate things that are really raw and might go away soon, or perhaps mutate dramatically;
++ **draft**: to designate things that are going to stabilise;
++ **stable**: to designate things with a certain degree of maturity.
 
 In the past Clirr was used to enforce backward compatibility of stable things, but it was dropped after the JDK 8 upgrade. Up to now
 it hasn't been replaced by another tool yet. So perhaps at the moment TheseFoolishThings might be of your interest more for inspiration
