--- a/modules/examples/DciDisplayableExample/pom.xml
+++ b/modules/examples/DciDisplayableExample/pom.xml
@@ -40,7 +40,7 @@
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-thesefoolishthings-examples-dci-displayable</artifactId>
     <version>3.2-ALPHA-9-SNAPSHOT</version>
-    <name>TheseFoolishThings Examples - DCI Displayable</name>
+    <name>TheseFoolishThings :: Examples :: DCI :: Displayable</name>
     <description>
         An example of DCI for the Displayable role in a DCI environment.
     </description>
