--- a/archetypes/project/pom.xml
+++ b/archetypes/project/pom.xml
@@ -41,7 +41,7 @@
     <artifactId>project-archetype</artifactId>
     <version>3.2-ALPHA-9-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
-    <name>TheseFoolishThings - Project Archetype</name>
+    <name>TheseFoolishThings :: Project Archetype</name>
     <description>TheseFoolishThings - Project Archetype</description>
 
     <build>
