--- a/modules/Actors/pom.xml
+++ b/modules/Actors/pom.xml
@@ -42,7 +42,7 @@
     <artifactId>it-tidalwave-actor</artifactId>
     <version>3.2-ALPHA-9-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>TheseFoolishThings - Actors</name>
+    <name>TheseFoolishThings :: Actors</name>
     <description>
         An experimental module which provides an implementation of an actor-based framework.
     </description>
