--- a/modules/MessageBus/pom.xml
+++ b/modules/MessageBus/pom.xml
@@ -42,7 +42,7 @@
     <artifactId>it-tidalwave-messagebus</artifactId>
     <version>3.2-ALPHA-9-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>TheseFoolishThings - MessageBus</name>
+    <name>TheseFoolishThings :: MessageBus</name>
     <description>
         An abstract description of a simple message bus to be used within an application.
     </description>
