--- a/modules/SpringMessageBus/pom.xml
+++ b/modules/SpringMessageBus/pom.xml
@@ -42,7 +42,7 @@
     <artifactId>it-tidalwave-messagebus-spring</artifactId>
     <version>3.2-ALPHA-9-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>TheseFoolishThings - MessageBus (Spring)</name>
+    <name>TheseFoolishThings :: MessageBus :: Spring</name>
     <description>
         A Spring implementation of a simple message bus to be used within an application.
     </description>
