--- a/modules/examples/Data/pom.xml
+++ b/modules/examples/Data/pom.xml
@@ -40,7 +40,7 @@
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-thesefoolishthings-examples-data</artifactId>
     <version>3.2-ALPHA-9-SNAPSHOT</version>
-    <name>TheseFoolishThings Examples - Data</name>
+    <name>TheseFoolishThings :: Examples :: Data</name>
     <description>
         This module provides sample data structures used by other examples.
     </description>
