--- a/modules/examples/InMemoryFinderExample/pom.xml
+++ b/modules/examples/InMemoryFinderExample/pom.xml
@@ -40,7 +40,7 @@
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample1</artifactId>
     <version>3.2-ALPHA-9-SNAPSHOT</version>
-    <name>TheseFoolishThings Examples - Finder Example 1</name>
+    <name>TheseFoolishThings :: Examples :: In-memory Finder Example</name>
     <description>
         A simple example of Finder usage.
     </description>
