--- a/modules/examples/JPAFinderExample/pom.xml
+++ b/modules/examples/JPAFinderExample/pom.xml
@@ -26,21 +26,20 @@
     *********************************************************************************************************************
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>thesefoolishthings-examples</artifactId>
-        <version>3.2-ALPHA-9-SNAPSHOT</version>
+        <version>3.2-ALPHA-9</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample3</artifactId>
-    <version>3.2-ALPHA-9-SNAPSHOT</version>
+    <version>3.2-ALPHA-9</version>
     <name>TheseFoolishThings :: Examples :: Finder :: JPA Finder</name>
     <description>
         An example of Finder integration with JPA.
