--- a/modules/examples/DciDisplayableExample/pom.xml
+++ b/modules/examples/DciDisplayableExample/pom.xml
@@ -46,7 +46,7 @@
     </description>
 
     <properties>
-        <mainClass>it.tidalwave.thesefoolishthings.examples.dci.displayable.Main</mainClass>
+        <tft.mainClass>it.tidalwave.thesefoolishthings.examples.dci.displayable.Main</tft.mainClass>
     </properties>
 
     <dependencies>
