--- a/modules/Actors/pom.xml
+++ b/modules/Actors/pom.xml
@@ -34,13 +34,13 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>3.2-ALPHA-12-SNAPSHOT</version>
+        <version>3.2-ALPHA-12</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-actor</artifactId>
-    <version>3.2-ALPHA-12-SNAPSHOT</version>
+    <version>3.2-ALPHA-12</version>
     <packaging>jar</packaging>
     <name>TheseFoolishThings :: Actors</name>
     <description>
