JPA Finder example advanced.

--- a/modules/examples/JPAFinderExample/pom.xml
+++ b/modules/examples/JPAFinderExample/pom.xml
@@ -56,6 +56,10 @@
         </dependency>
         <dependency>
             <groupId>it.tidalwave.thesefoolishthings</groupId>
+            <artifactId>it-tidalwave-role</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>it.tidalwave.thesefoolishthings</groupId>
             <artifactId>it-tidalwave-util</artifactId>
         </dependency>
 
