--- a/archetypes/project/pom.xml
+++ b/archetypes/project/pom.xml
@@ -33,13 +33,13 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>thesefoolishthings</artifactId>
-        <version>3.2-ALPHA-13-SNAPSHOT</version>
+        <version>3.2-ALPHA-13</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>project-archetype</artifactId>
-    <version>3.2-ALPHA-13-SNAPSHOT</version>
+    <version>3.2-ALPHA-13</version>
     <packaging>maven-archetype</packaging>
     <name>TheseFoolishThings :: Project Archetype</name>
     <description>TheseFoolishThings - Project Archetype</description>
