--- a/pom.xml
+++ b/pom.xml
@@ -44,22 +44,15 @@
     <version>3.2-ALPHA-15-SNAPSHOT</version>
     <name>TheseFoolishThings</name>
     <inceptionYear>2009</inceptionYear>
-    <url>https://tidalwave.bitbucket.io/thesefoolishthings/${project.version}</url>
+    <url>https://tidalwave.bitbucket.io/thesefoolishthings/</url>
     <description>
-This project was born, several years ago, as the classic “kitchen sink” of stuff from other projects that was deemed of being reusable.
-Sometimes it grew in a disordered way, other times it was reviewed and cleaned up accurately. It contains different sort of things: from
-simple stuff such as a **```TimeProvider```** that can be mocked (for time-based tests), to **type safe ```Map```s** (following
-advice of Joshua Bloch); up to some more structured things such an extensible **```Finder```** to manipulate queries from a generic data
-source; **a facility for working with the DCI (Data, Context and Interactions) architectural pattern**; a **simple ```MessageBus```** suitable for using
-the Publish and Subscribe pattern inside an application.
+This project is a collection of miscellaneous tools shared by a number of projects of the same author. There are **simple tuples** to use with
+Java Streams, **type-safe maps** (following advice of Joshua Bloch), a **finder** that handles in a smart way queries to data sources, a facility to use the
+**DCI (Data, Context and Interactions) architectural pattern**, a simple **message bus** suitable for using the pub-sub pattern inside an application, some
+**test utilities**, an **experimental actor framework** and a few other small things.
 
-There is also some really exotic stuff, such as small implementation of **collaborative
-Actors** (working, but designed basically for didactic purposes). Actually this whole project is often used in Java classes to show things
-that are reasonably contextualized in a real-world scenario (the core parts of this project are used by working pet projects; something is
-also part of industrial project). There is good stuff and some strange stuff - in general an attitude of this project is to also try things
-in a different way than the standard.
-
-TheseFoolishThings requires and is tested on JDK 11 and 17.
+Yes, the project name is a tribute to the [jazz standard with the same name](https://en.wikipedia.org/wiki/These_Foolish_Things_(Remind_Me_of_You)) by
+Maschwitz and Strachey.
     </description>
 
     <distributionManagement>
