--- a/modules/Utilities/pom.xml
+++ b/modules/Utilities/pom.xml
@@ -33,13 +33,13 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>3.2-ALPHA-16</version>
+        <version>3.2-ALPHA-17-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-util</artifactId>
-    <version>3.2-ALPHA-16</version>
+    <version>3.2-ALPHA-17-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>TheseFoolishThings :: Utilities</name>
     <description>
