Injection methods added to ReflectionUtils.

--- a/modules/Utilities/pom.xml
+++ b/modules/Utilities/pom.xml
@@ -57,6 +57,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
