--- a/modules/SpringMessageBus/pom.xml
+++ b/modules/SpringMessageBus/pom.xml
@@ -34,13 +34,13 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>3.2-ALPHA-17</version>
+        <version>3.2-ALPHA-18-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-messagebus-spring</artifactId>
-    <version>3.2-ALPHA-17</version>
+    <version>3.2-ALPHA-18-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>TheseFoolishThings :: MessageBus :: Spring</name>
     <description>
